HERE map added to listing

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CLOUD_NAME=djbrgokaj
 CLOUD_API_KEY=881566728625882
 CLOUD_API_SECRET=Zw0O1X5Nf6jThEZ-sMeu1QxhzMs
+
+MAP_TOKEN=NomE4_cpIElBLTXIZ_bjW-HfIm_ZzWiSJm20YfBVS5o
