--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ CLOUD_API_KEY=881566728625882
 CLOUD_API_SECRET=Zw0O1X5Nf6jThEZ-sMeu1QxhzMs
 
 MAP_TOKEN=NomE4_cpIElBLTXIZ_bjW-HfIm_ZzWiSJm20YfBVS5o
+
+ATLASDB_URL=mongodb+srv://knikhil128:Knikhil%40128@cluster0.llyhcew.mongodb.net/?retryWrites=true&w=majority
+
+SECRET=jkashdfuierhkjac983749hif09u9d3jkasdn93jkbhan9873
