--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "21.5.0"
+  },
   "name": "major-project",
   "version": "1.0.0",
   "description": "",
@@ -11,6 +14,7 @@
   "dependencies": {
     "cloudinary": "^1.41.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
